# cloudformation-guard-api

./: Cargo.toml  Dockerfile  README.md
src/: guard.rs  handlers.rs  main.rs
test_data/: s3-bucket-request.yaml
test_rules/: test1.guard  test2.guard
