[package]
name = "cloudformation-guard-api"
version = "0.1.0"
edition = "2021"
authors = ["Tiago Condeixa"]
description = "AWS CloudFormation Guard API is an API on top of AWS CloudFormation Guard Core instead of CLI"
license = "Apache-2.0"
repository = "https://github.com/tsilvestreco/cloudformation-guard-api"
documentation = "https://github.com/tsilvestreco/cloudformation-guard-api/blob/main/README.md"
readme = "README.md"
keywords = ["policy-as-code", "guard-api", "guard", "cfn-guard", "security", "compliance"]


[dependencies]
axum = "0.6.0-rc.2"
cfn-guard = "2.1.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
